Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.45, 10.5.3
-
Fix Version/s: 10.5.5
-
Component/s: Performance Schema
-
Labels:None
-
Environment:Fedora 32 . gcc10.1.0, glibc 2.31-
Description
/home/dan/repos/mariadb-server-10.5/mysys/my_rdtsc.c: In function ‘my_timer_milliseconds’:
|
/home/dan/repos/mariadb-server-10.5/mysys/my_rdtsc.c:181:3: error: ‘ftime’ is deprecated [-Werror=deprecated-declarations]
|
181 | ftime(&ft);
|
| ^~~~~
|
In file included from /home/dan/repos/mariadb-server-10.5/mysys/my_rdtsc.c:79:
|
/usr/include/sys/timeb.h:39:12: note: declared here
|
39 | extern int ftime (struct timeb *__timebuf)
|
| ^~~~~
|
cc1: all warnings bein
|